# plinko-pir-research

./: .github-setup.md  .gitignore  DEVELOPMENT.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  package.json  setup.sh  vitest.config.js
.claude-collective/metrics/: metrics-20251110.json
.claude/agents/: npx-package-agent.md
.github/workflows/: deploy-vultr.yml
deploy/: DEPLOYMENT.md  LOCAL_TESTING.md  README.md
docs/: hint-generation-optimization.md
docs/research/: Plinko PIR tutorial.md
plinko-reference/: BUG_FIX_PORT_SUMMARY.md  IPRF_IMPLEMENTATION.md  README.md  SECURITY_AUDIT_NOTES.md  config.py  database.py  demo.py  handlers.py  iprf.py  plinko_core.py  plinko_server.py  plinko_server_simple.py  prset.py  requirements.txt  run_tests.py  table_prp.py  test_go_python_comparison.py  test_iprf_simple.py  test_structure.py  utils.py
plinko-reference/tests/: test_iprf.py  test_prset.py  test_server.py  test_table_prp.py
research/: cryo-reth-integration-spec.md
research/findings/: ipfs-parquet-storage-schema.md  phase7-summary.md
scripts/: test-addressing.sh  validate-structure.sh  vultr-deploy.sh
services/cdn-mock/: Dockerfile  nginx.conf
services/db-generator/: main.go
services/plinko-pir-server/: iprf.go  main.go  prset.go  server.go  server_test.go
services/plinko-update-service/: bundler.go  config.go  main.go
services/rabby-wallet/: README.md
services/state-syncer/: bundler.go  debug_test.go  (+13 more)
tools/: convert_db.go
tools/reth-adapter/: Cargo.toml  deploy.sh
tools/reth-adapter/src/: main.rs
(+55 files in other folders)
